k8s/manual/envoy-gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: bingeo-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
