k8s/manual/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bingeo-gateway
  namespace: bingeo-envoy-gateway
spec:
  gatewayClassName: bingeo-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 5000
      allowedRoutes:
        namespaces:
          from: All
